5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1789_1596.log
== TEST (2019-05-29 18:27:48) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(n,media,(d=type))
print(n)
-- ERROR:
File "XXXX", line 4
    n=(n,media,(d=type))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:17) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(n,media,(d=type))
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(n,media,(d=type))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:21) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(n,media,(d=type))
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(n,media,(d=type))
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:31) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(n,media,d=type)
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(n,media,d=type)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:41) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type)
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:28:45) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type)
print(round(n,2))
-- EXECUTION TIME:
0.211891
-- ERROR:
  File "/home/codebench/codes/1789/1596/main.py", line 4
    n=(media,d=type)
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:28:47) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type)
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:29:21) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=('media', d=type)
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=('media', d=type)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:18) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))

n=(media, d=type)
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(media, d=type)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:36) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))

n(media, d=type)
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:30:52) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))

n(media, d=type)
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:31:29) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))

n(media, de=type)
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:17) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:37) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))

print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:21) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=input()
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:32) 
-- CODE:
from numpy import*

media=array(eval(int("notas do trabalho: ")))
n=input()
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:49) 
-- CODE:
from numpy import*

media=array(eval(int("notas do trabalho: ")))
n=(de=type)
print(round(media,2))
-- ERROR:
File "XXXX", line 4
    n=(de=type)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:34:09) 
-- CODE:
from numpy import*

media=array(eval(int("notas do trabalho: ")))
n=(nota, de=type)
print(round(media,2))
-- ERROR:
File "XXXX", line 4
    n=(nota, de=type)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:12) 
-- CODE:
from numpy import*

media=array(eval(int("notas do trabalho: ")))
n=(ones, de=type)
print(round(media,2))
-- ERROR:
File "XXXX", line 4
    n=(ones, de=type)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:32) 
-- CODE:
from numpy import*

media=array(eval(int("notas do trabalho: ")))
n=(ones, [media])
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:35:48) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(ones, [media])
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:01) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(ones, [notas])
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:13) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(ones, '[notas]')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:25) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(ones, 'media')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:32) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=('media')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:48) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=('media'[0])
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:57) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(media[0])
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:37:18) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(media[0], de=type)
print(round(media,2))
-- ERROR:
File "XXXX", line 4
    n=(media[0], de=type)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:38:41) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=(media[1.5],media[4.2],media[9.1])
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:07) 
-- CODE:
from numpy import*

media=array(eval(float("notas do trabalho: ")))
n=('media[1.5]' , 'media[4.2]' , 'media[9.1]')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:18) 
-- CODE:
from numpy import*

media=array(eval(int("notas do trabalho: ")))
n=('media[1.5]' , 'media[4.2]' , 'media[9.1]')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:34) 
-- CODE:
from numpy import*

media=array(eval(intput("notas do trabalho: ")))
n=('media[1.5]' , 'media[4.2]' , 'media[9.1]')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:43) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=('media[1.5]' , 'media[4.2]' , 'media[9.1]')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:50) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=('media[1.5]' , 'media[4.2]' , 'media[9.1]')
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:28) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=("media[1.5]" , "media[4.2]" , "media[9.1]")
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:45) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=("media[1.5]" , "media[4.2]" , "media[9.1]")
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:40:58) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n("media[1.5]" , "media[4.2]" , "media[9.1]")
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:04) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n("media[1.5]" , "media[4.2]" , "media[9.1]")
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:21) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,"media[1.5]" , "media[4.2]" , "media[9.1]")
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:38) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,"media[1.5]" , "media[4.2]" , "media[9.1]")
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:41:59) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,"media[1.5]" , "media[4.2]" , "media[9.1]")

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:11) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,"[1.5]" , '[4.2]' , '[9.1]')

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:31) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,"[1.5]" , '[4.2]' , '[9.1]')

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:01:48) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,("[1.5]" , '[4.2]' , '[9.1]'))

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:02:08) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(de=type("[1.5]" , '[4.2]' , '[9.1]'))

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(de=type("[1.5]" , '[4.2]' , '[9.1]'))
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:03:42) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(de=type,[0]))

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(de=type,[0]))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:03:50) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(de=type,[0])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(de=type,[0])
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:04:04) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(n,de=type [0])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(n,de=type [0])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:04:44) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(n,de=type [''])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(n,de=type [''])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:04:54) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(n,de=type [""])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(n,de=type [""])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:05:49) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(n,de=type [o] and [10])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(n,de=type [o] and [10])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:08) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(n,de=type [o and 10])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(n,de=type [o and 10])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:17) 
-- CODE:
from numpy import*

n=array(eval(input("notas do trabalho: ")))
media=(n,de=type [o >= 10])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    media=(n,de=type [o >= 10])
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:34) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(n,de=type [o >= 10])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(n,de=type [o >= 10])
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:41) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(n,de=type [media])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(n,de=type [media])
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:51) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(de=type,[media])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(de=type,[media])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:06:56) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(de=type [media])

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(de=type [media])
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:03) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=( [media])

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:25) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[media])

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:31) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[media])

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:48) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,['media'])

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:07:54) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,['media'])

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:09:32) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=([media]):

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=([media]):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:09:59) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,de=type):

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,de=type):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:10:03) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type):

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,d=type):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:10:16) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type[]):

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,d=type[]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:10:21) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type[0]):

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,d=type[0]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:10:28) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type[1]):

print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(media,d=type[1]):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:11:05) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,d=type)
print(n)
-- ERROR:
File "XXXX", line 4
    n=(media,d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:12:54) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,d=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(eval,d=type)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:13:09) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval, media,d=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(eval, media,d=type)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:13:18) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval, media==d=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(eval, media==d=type)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:13:22) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval, media=d=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(eval, media=d=type)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:13:35) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval, 'media'de=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(eval, 'media'de=type)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:13:42) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval, 'media', de=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(eval, 'media', de=type)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:13:49) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones, 'media', de=type)

print(n)
-- ERROR:
File "XXXX", line 4
    n=(ones, 'media', de=type)
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:21:14) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,[1.5],[4.2],[9.1])

print(n)
-- EXECUTION TIME:
0.446213
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
(array([1, 0, 3]), [1.5], [4.2], [9.1])
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
(array([3, 2, 1, 5, 3]), [1.5], [4.2], [9.1])
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
(array([2, 2, 2, 2]), [1.5], [4.2], [9.1])
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:15) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,[1.5],[4.2],[9.1])

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:36) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(array,[1.5],[4.2],[9.1])

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:01) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,[1.5],[4.2],[9.1])

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:23) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,[1.5],[4.2],[9.1])

print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:36) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,[1.5],[4.2],[9.1])
	
	print(round(n,2))
-- ERROR:
File "XXXX", line 6
    print(round(n,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:48) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[1.5],[4.2],[9.1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:23:00) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[1.5],[4.2])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:23:08) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[1.5],[4.2])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:24:29) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[1.5],[4.2],de=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(ones,[1.5],[4.2],de=type)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:06) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[1.6],[4.7],de=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(ones,[1.6],[4.7],de=type)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:25) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[1],[4],de=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(ones,[1],[4],de=type)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:38) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[0],[1],de=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(ones,[0],[1],de=type)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:44) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones,[0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:57) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,[0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:26:10) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(eval,[0],[1])
	
	print(round(n,2))
-- ERROR:
File "XXXX", line 6
    print(round(n,2))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:03) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(media,'[0],[1]')
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:26) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=([0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:34) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=([0],[1]):
	
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=([0],[1]):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:52) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones [0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:28:39) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones, "[0] , [1]")
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:28:45) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones, "[0] , [1]")
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:28:55) 
-- CODE:
from numpy import*

media=array(eval(input("notas do trabalho: ")))
n=(ones, "[0] , [1]")
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:29:23) 
-- CODE:
from numpy import*

media=array(eval(input("[0]: ")))
n=(ones, "[0] , [1]")
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:30:18) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(ones, "[0] , [1]")
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:30:35) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(notas, "[0] , [1]")
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:30:48) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(notas,[0] , [1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:31:01) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(notas,[0]:[1])
	
print(round(n,2))
-- ERROR:
File "XXXX", line 4
    n=(notas,[0]:[1])
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:31:10) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(notas,[0])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:31:29) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(media,[0])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:31:38) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(media,[0])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:32:24) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(media*[0])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:32:38) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(media*[0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:32:46) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n=(media*[0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:33:28) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(media*[0],[1])
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:33:50) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(media*de=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(media*de=type)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:00) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(media,de=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(media,de=type)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:12) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(media*d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(media*d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:23) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(print*d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(print*d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:30) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(print,d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(print,d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:43) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(notas,d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(notas,d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:49) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([0],[1])
n=(notas*d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(notas*d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:35:04) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print('[0],[1]')
n=(notas*d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 5
    n=(notas*d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:36:01) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([1.6])
print([7.9])
print([8.7])

n=(notas*d=type)
	
print(round(n,2))
-- ERROR:
File "XXXX", line 8
    n=(notas*d=type)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:36:17) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([1.6])
print([7.9])
print([8.7])

n=(notas*media)
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:36:25) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
print([1.6])
print([7.9])
print([8.7])

n=(notas*media)
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:37:43) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n1=([1.6])
n2=([.9])
n3=([8.7])

n=(notas*media)
	
print(round(n,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:38:42) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n1=([1.6])
n2=([.9])
n3=([8.7])

M=('n1' , 'n2' ,'n3' *media)
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:39:01) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n1=([1.6])
n2=([.9])
n3=([8.7])

M=('n1' , 'n2' ,'n3')
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:39:08) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n1=([1.6])
n2=([.9])
n3=([8.7])

M=('n1' , 'n2' ,'n3')
	
print(round(M,2))
-- EXECUTION TIME:
0.372303
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1596/main.py", line 10, in <module>
    print(round(M,2))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:39:09) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n1=([1.6])
n2=([.9])
n3=([8.7])

M=('n1' , 'n2' ,'n3')
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:39:13) 
-- CODE:
from numpy import*

media=array(eval(input("notas: ")))
n1=([1.6])
n2=([.9])
n3=([8.7])

M=('n1' , 'n2' ,'n3')
	
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
